# claude-switch

./: CLAUDE.md  Cargo.toml  DESIGN.md  LICENSE  README.md  spike.sh
.github/workflows/: release.yml
src/: claude.rs  commands.rs  config.rs  index.rs  keychain.rs  main.rs  paths.rs  picker.rs  safety.rs  swap.rs
